Improvements made to the overal UI

--- a/index.html
+++ b/index.html
@@ -284,17 +284,31 @@
               Mohammed Hussein
             </h1>
             <p class="text-xl text-muted-color mb-8 max-w-xl">
-              A passionate
-              <span class="text-secondary-color">Software Engineer</span>
-              focused on building exceptional digital experiences. I specialize
-              in turning complex problems into elegant, user-friendly solutions.
+              A <strong>Full-Stack Software Engineer</strong> specializing in
+              robust
+              <span class="text-secondary-color">C#/.NET backends</span>
+              and engaging frontends, with a keen focus on implementing
+              <strong>Python-based AI/LLM solutions</strong>.
             </p>
-            <a
-              href="#projects"
-              class="inline-flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-lg text-white bg-blue-600 hover:bg-blue-700 transition duration-300 shadow-lg shadow-blue-500/50"
+            <div
+              class="flex flex-col sm:flex-row justify-center md:justify-start gap-4"
             >
-              View Projects
-            </a>
+              <a
+                href="#projects"
+                class="inline-flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-lg text-white bg-blue-600 hover:bg-blue-700 transition duration-300 shadow-lg shadow-blue-500/50"
+              >
+                View Projects
+              </a>
+
+              <a
+                href="Resume/MohammedHussein_CV.pdf"
+                download
+                class="inline-flex items-center justify-center px-8 py-3 border border-[var(--border-color)] text-base font-medium rounded-lg text-default-color bg-card hover:bg-card-hover transition duration-300 shadow-md"
+              >
+                <i data-lucide="download" class="w-5 h-5 mr-2"></i>
+                View Resume
+              </a>
+            </div>
           </div>
 
           <div class="md:w-1/2 order-1 md:order-2 flex justify-center">
@@ -348,27 +362,29 @@
             >
               <ul class="list-disc space-y-2 text-default-color pl-5">
                 <li>
-                  Implemented an **LLM-powered internal assistant** using
-                  **Python** and **LangChain/OpenAI**, enhancing employee access
-                  to organizational knowledge and improving support efficiency.
-                  <a href="#" class="text-primary-color text-sm hover:underline"
-                    >Click here to view project</a
-                  >
+                  Implemented an
+                  <strong>LLM-powered internal assistant</strong> using
+                  <strong>Python</strong> and <strong>LangChain/OpenAI</strong>,
+                  enhancing employee access to organizational knowledge and
+                  improving support efficiency.
+                  <!-- <a href="#" class="text-primary-color text-sm hover:underline"
+                    >Click here to view project</a> -->
                 </li>
                 <li>
-                  Contributed to the development of a **Project Register
-                  application** (C#, ASP.NET MVC, MS SQL) which streamlined
-                  project tracking, **boosting oversight and productivity by
-                  50%**.
+                  Contributed to the development of a
+                  <strong>Project Register application</strong> (C#, ASP.NET
+                  MVC, MS SQL) which streamlined project tracking,
+                  <strong>boosting productivity by 50%</strong>.
                 </li>
                 <li>
                   Supported Business Data Analytics by cleaning and organizing
-                  **engineering and operational data** for processing, utilizing
-                  Microsoft Excel and Word.
+                  <strong>engineering and operational data</strong> for
+                  processing, utilizing Microsoft Excel and Word.
                 </li>
                 <li>
-                  Key Technologies: **Python**, **LangChain**, **C#**, **.NET
-                  MVC**, **MS SQL**.
+                  Key Technologies: <strong>Python</strong>,
+                  <strong>LangChain</strong>, <strong>C#</strong>,
+                  <strong>.NET MVC</strong>, <strong>MS SQL</strong>.
                 </li>
               </ul>
             </div>
@@ -400,22 +416,27 @@
             >
               <ul class="list-disc space-y-2 text-default-color pl-5">
                 <li>
-                  Troubleshot and resolved employee **network issues** for the
-                  Networking Department, contributing to a **45% improvement in
-                  employee productivity** by reducing technical downtime.
+                  Troubleshot and resolved employee
+                  <strong>network issues</strong> for the Networking Department,
+                  contributing to a
+                  <strong>45% improvement in employee productivity</strong> by
+                  reducing technical downtime.
                 </li>
                 <li>
                   Managed telephone setups across multiple departments and
-                  presented research on core **networking concepts** to bolster
-                  team knowledge.
+                  presented research on core
+                  <strong>networking concepts</strong> to bolster team
+                  knowledge.
                 </li>
                 <li>
-                  Demonstrated ability to **handle tasks independently** and
-                  efficiently under pressure.
+                  Demonstrated ability to
+                  <strong>handle tasks independently</strong> and efficiently
+                  under pressure.
                 </li>
                 <li>
-                  Key Skills: **Network Troubleshooting**, **Technical
-                  Support**, **Independent Task Management**.
+                  Key Skills: <strong>Network Troubleshooting</strong>,
+                  <strong>Technical Support</strong>,
+                  <strong>Independent Task Management</strong>.
                 </li>
               </ul>
             </div>
@@ -574,6 +595,61 @@
                 ></i>
                 <p class="font-semibold text-default-color">Git/GitHub</p>
                 <p class="text-xs text-muted-color">Version Control</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <h3
+              class="text-2xl font-semibold mb-6 border-b border-[var(--border-color)] pb-2 text-default-color"
+            >
+              Professional & Soft Skills
+            </h3>
+            <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-6">
+              <div
+                class="p-5 bg-card rounded-xl shadow-xl hover:bg-card-hover transition duration-300 transform hover:scale-[1.02] text-center group"
+              >
+                <i
+                  data-lucide="users"
+                  class="w-7 h-7 mx-auto mb-2 text-secondary-color"
+                ></i>
+                <p class="font-semibold text-default-color">
+                  Team Collaboration
+                </p>
+                <p class="text-xs text-muted-color">Agile/Scrum Experience</p>
+              </div>
+              <div
+                class="p-5 bg-card rounded-xl shadow-xl hover:bg-card-hover transition duration-300 transform hover:scale-[1.02] text-center group"
+              >
+                <i
+                  data-lucide="lightbulb"
+                  class="w-7 h-7 mx-auto mb-2 text-secondary-color"
+                ></i>
+                <p class="font-semibold text-default-color">Problem Solving</p>
+                <p class="text-xs text-muted-color">Analytical & Creative</p>
+              </div>
+              <div
+                class="p-5 bg-card rounded-xl shadow-xl hover:bg-card-hover transition duration-300 transform hover:scale-[1.02] text-center group"
+              >
+                <i
+                  data-lucide="mic"
+                  class="w-7 h-7 mx-auto mb-2 text-secondary-color"
+                ></i>
+                <p class="font-semibold text-default-color">Public Speaking</p>
+                <p class="text-xs text-muted-color">
+                  Presenting Technical & Non-Technical Topics
+                </p>
+              </div>
+              <div
+                class="p-5 bg-card rounded-xl shadow-xl hover:bg-card-hover transition duration-300 transform hover:scale-[1.02] text-center group"
+              >
+                <i
+                  data-lucide="clock"
+                  class="w-7 h-7 mx-auto mb-2 text-secondary-color"
+                ></i>
+                <p class="font-semibold text-default-color">Time Management</p>
+                <p class="text-xs text-muted-color">
+                  Prioritization & Delivery
+                </p>
               </div>
             </div>
           </div>
