--- a/index.html
+++ b/index.html
@@ -795,93 +795,78 @@
         </div>
       </section>
       <!-- 4. Testimonials Section -->
-      <section id="testimonials" class="py-16 fade-in-section relative">
+      <section id="testimonials" class="py-16 fade-in-section">
         <h2 class="text-4xl font-bold text-center mb-12 text-primary-color">
           What People Say
         </h2>
 
-        <div class="relative max-w-4xl mx-auto">
+        <div
+          class="flex flex-col md:flex-row md:space-x-8 space-y-8 md:space-y-0"
+        >
+          <!-- Testimonial 1 -->
           <div
-            id="testimonial-slider"
-            class="flex overflow-x-hidden snap-x snap-mandatory scroll-smooth relative"
+            class="flex-1 bg-card p-8 rounded-2xl shadow-xl border-t-4 border-secondary-color transition hover:scale-[1.02] duration-300"
           >
-            <div
-              class="min-w-full bg-card p-8 rounded-xl shadow-2xl snap-center flex flex-col items-center text-center"
-            >
-              <i
-                data-lucide="quote"
-                class="w-8 h-8 text-secondary-color mb-4"
-              ></i>
-              <p class="text-xl text-default-color italic mb-6">
-                “Mohammed delivered an exceptional LLM integration that
-                dramatically improved our internal knowledge retrieval process.
-                His C# and Python skills are top-notch, and he's highly
-                collaborative.”
-              </p>
-              <div class="text-center">
-                <p class="font-bold text-lg text-default-color">
-                  Recruiter Name
-                </p>
-                <p class="text-sm text-muted-color">Title, Company X</p>
-              </div>
-            </div>
-
-            <div
-              class="min-w-full bg-card p-8 rounded-xl shadow-2xl snap-center flex flex-col items-center text-center"
-            >
-              <i
-                data-lucide="quote"
-                class="w-8 h-8 text-secondary-color mb-4"
-              ></i>
-              <p class="text-xl text-default-color italic mb-6">
-                “His work on the Project Register application streamlined our
-                workflow, leading to a quantifiable increase in team
-                productivity. An organized and results-driven developer.”
-              </p>
-              <div class="text-center">
-                <p class="font-bold text-lg text-default-color">
-                  Team Lead Name
-                </p>
-                <p class="text-sm text-muted-color">Role, VRA</p>
-              </div>
-            </div>
-
-            <div
-              class="min-w-full bg-card p-8 rounded-xl shadow-2xl snap-center flex flex-col items-center text-center"
-            >
-              <i
-                data-lucide="quote"
-                class="w-8 h-8 text-secondary-color mb-4"
-              ></i>
-              <p class="text-xl text-default-color italic mb-6">
-                “Mohammed’s public speaking ability to present complex technical
-                topics clearly is outstanding. He’s a well-rounded professional
-                asset.”
-              </p>
-              <div class="text-center">
-                <p class="font-bold text-lg text-default-color">Manager Name</p>
-                <p class="text-sm text-muted-color">Department Head</p>
+            <p class="text-lg italic text-muted-color mb-6 leading-relaxed">
+              “Mohammed is a strategic thinker who inspires his team. His vision
+              for the company's growth has been instrumental, and his guidance
+              has led to consistent, high-quality results.”
+            </p>
+            <div class="flex items-center gap-4">
+              <img
+                src="img/medddd.jpg"
+                alt="Jane Doe"
+                class="w-12 h-12 rounded-full object-cover"
+              />
+              <div>
+                <p class="font-semibold text-default-color">Jane Doe</p>
+                <p class="text-sm text-muted-color">CTO at Innovatech</p>
               </div>
             </div>
           </div>
 
-          <button
-            id="slider-prev"
-            class="absolute top-1/2 left-0 transform -translate-y-1/2 -translate-x-full md:-translate-x-1/2 p-3 bg-card rounded-full shadow-lg text-primary-color hover:bg-card-hover transition duration-300 z-10"
-          >
-            <i data-lucide="chevron-left" class="w-6 h-6"></i>
-          </button>
-          <button
-            id="slider-next"
-            class="absolute top-1/2 right-0 transform -translate-y-1/2 translate-x-full md:translate-x-1/2 p-3 bg-card rounded-full shadow-lg text-primary-color hover:bg-card-hover transition duration-300 z-10"
-          >
-            <i data-lucide="chevron-right" class="w-6 h-6"></i>
-          </button>
-
+          <!-- Testimonial 1 -->
           <div
-            id="slider-dots"
-            class="flex justify-center mt-6 space-x-3"
-          ></div>
+            class="flex-1 bg-card p-8 rounded-2xl shadow-xl border-t-4 border-secondary-color transition hover:scale-[1.02] duration-300"
+          >
+            <p class="text-lg italic text-muted-color mb-6 leading-relaxed">
+              “Mohammed’s ability to simplify complex technical challenges is
+              unmatched. The project was delivered ahead of schedule and
+              exceeded all metrics.”
+            </p>
+            <div class="flex items-center gap-4">
+              <img
+                src="img/medddd.jpg"
+                alt="Jane Doe"
+                class="w-12 h-12 rounded-full object-cover"
+              />
+              <div>
+                <p class="font-semibold text-default-color">Jane Doe</p>
+                <p class="text-sm text-muted-color">CTO at Innovatech</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Testimonial 2 -->
+          <div
+            class="flex-1 bg-card p-8 rounded-2xl shadow-xl border-t-4 border-secondary-color transition hover:scale-[1.02] duration-300"
+          >
+            <p class="text-lg italic text-muted-color mb-6 leading-relaxed">
+              “The interface he designed was beautiful and intuitive. Mohammed
+              trulyunderstands modern design and accessibility.”
+            </p>
+            <div class="flex items-center gap-4">
+              <img
+                src="img/medddd.jpg"
+                alt="Mark Chen"
+                class="w-12 h-12 rounded-full object-cover"
+              />
+              <div>
+                <p class="font-semibold text-default-color">Mark Chen</p>
+                <p class="text-sm text-muted-color">Lead UX Designer</p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
@@ -1089,70 +1074,6 @@
       });
       nextBtn.addEventListener("click", () => {
         carousel.scrollBy({ left: carousel.clientWidth, behavior: "smooth" });
-      });
-
-      document.addEventListener("DOMContentLoaded", () => {
-        const slider = document.getElementById("testimonial-slider");
-        const prevButton = document.getElementById("slider-prev");
-        const nextButton = document.getElementById("slider-next");
-        const dotsContainer = document.getElementById("slider-dots");
-        const slides = slider.querySelectorAll(".min-w-full");
-        let currentIndex = 0;
-
-        // 1. Create Dots
-        slides.forEach((_, index) => {
-          const dot = document.createElement("button");
-          dot.classList.add(
-            "w-3",
-            "h-3",
-            "rounded-full",
-            "bg-muted-color",
-            "transition-colors",
-            "duration-300"
-          );
-          dot.setAttribute("data-slide-to", index);
-          dot.addEventListener("click", () => {
-            goToSlide(index);
-          });
-          dotsContainer.appendChild(dot);
-        });
-
-        const dots = dotsContainer.querySelectorAll("button");
-
-        function updateSlider() {
-          // Scroll the slider container to the current slide
-          slider.scrollTo({
-            left: slides[currentIndex].offsetLeft,
-            behavior: "smooth",
-          });
-
-          // Update active dot
-          dots.forEach((dot, index) => {
-            dot.classList.toggle("bg-primary-color", index === currentIndex);
-            dot.classList.toggle("bg-muted-color", index !== currentIndex);
-          });
-        }
-
-        function goToSlide(index) {
-          currentIndex = index;
-          if (currentIndex < 0) {
-            currentIndex = slides.length - 1;
-          } else if (currentIndex >= slides.length) {
-            currentIndex = 0;
-          }
-          updateSlider();
-        }
-
-        prevButton.addEventListener("click", () => {
-          goToSlide(currentIndex - 1);
-        });
-
-        nextButton.addEventListener("click", () => {
-          goToSlide(currentIndex + 1);
-        });
-
-        // Initialize the slider state
-        updateSlider();
       });
     </script>
   </body>
